deployment/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
  labels:
    service: hello
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: hello
