deployment/hello-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello
  namespace: hello
spec:
  rules:
    - http:
        host: hello.dev-wavelo-bis.cnco.tucows.systems
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello
                port:
                  number: 80
